DSLBanking/banking.ebnf
digit           ::= "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;
letter          ::= "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;
integer         ::= digit { digit } ;
create_account  ::= "create" "account" first_name last_name "with" "balance" amount ;
deposit         ::= "deposit" amount "to" account_number ;
withdraw        ::= "withdraw" amount "from" account_number ;
balance         ::= "balance" "of" account_number ;
exit            ::= "exit" | "quit" | "end" ;
program         ::= { statement } ;
statement       ::= (create_account | deposit | withdraw | balance | exit) ";" ;
identifier      ::= letter { letter | digit } ;
first_name      ::= letter { letter } ;
last_name       ::= letter { letter } ;
account_number  ::= letter letter digit digit digit digit digit digit ;
amount          ::= integer ;
